test/valid/TestTrue/TestTrue.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: AbstractMethod.plume 615 2012-05-21 14:52:19Z vv $
 */
class TestTrue extends Object is

	method main : () -> String is
		if true then "yes" else "no"
